--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h2>Hello<h2/>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My pages</title>
+
+    <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
+</head>
+
+<body>
+    <div class="jumbotron">
+        <ul class="list-group">
+            <a href="./pages/weather2/index.html" class="list-group-item list-group-item-active">Weather2</a>
+        </ul>
+    </div>
+</body>
+
+</html>
