--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <a href="">
+            <a href="https://vladimyrovych.github.io/contact-list/build/index.html">
                 <div class="card border-primary mb-3" style="max-width: 20rem;">
                     <div class="card-header">Contact List</div>
                     <div class="card-body" style="height: 300px;">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </a>
-            <a href="">
+            <a href="https://vladimyrovych.github.io/weather2/build/index.html">
                 <div class="card border-primary mb-3" style="max-width: 20rem;">
                     <div class="card-header">Weather 2</div>
                     <div class="card-body" style="height: 300px;">
